--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>spend-sentiment-visualizer</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Budget familial</title>
+    <meta name="description" content="Application de gestion budgétaire" />
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.svg" />
   </head>
